Fix max upload file size

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Form/contribution.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Form/contribution.html.twig
@@ -1,4 +1,6 @@
-{{ form_start(form) }}
+{{ form_start(form, {
+    action: url('haphpy_index') ~ '#contribute'
+}) }}
 {{ form_errors(form) }}
 
 {{ form_widget(form._token) }}
