--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Form/contribution.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Form/contribution.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form 'AppBundle:Form:fields.html.twig' %}
+
 {{ form_start(form, {
     action: url('haphpy_index') ~ '#contribute'
 }) }}
