--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -28,6 +28,17 @@
         <meta name="msapplication-TileColor" content="#f34141">
         <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
         <meta name="theme-color" content="#f34141">
+        {% if ga_enabled %}
+            <script>
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-66595746-1', {'siteSpeedSampleRate': 100});
+                ga('send', 'pageview');
+            </script>
+        {% endif %}
     </head>
     <body class="has-header">
         <div id="fb-root"></div>
