--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Common/ga.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Common/ga.html.twig
@@ -1,3 +1,4 @@
+<!-- We do use Google Analytics. Like Google we aren't evil ;-). Seriously, we just use it to check the effiency of the project communication. Maximum of unnecessary data harvesting has been unchecked. Thanks, for digging the code.  -->
 {% if ga_ua %}
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
