Setup public access to Contributions

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::base.html.twig' %}
 
-{% import "AppBundle:Macro:style.html.twig" as haphpy %}
+{% import "AppBundle:Macro:helpers.html.twig" as haphpy %}
 
 {% block title %}{{ parent() }} - {{ 'about.title'|trans }}{% endblock %}
 
