--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -131,9 +131,9 @@
         {% endblock %}
 
         {% block gauge %}
-        <section id="gauge-section">
+        <section id="gauge-section" class="page-section">
             <div class="container">
-                <h1>{{ 'haphpy.punchline'|trans|raw }}</h1>
+                <h1 class="punchline">{{ 'haphpy.punchline'|trans|raw }}</h1>
                 <div id="gauge">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info progress-bar-striped active"
