--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -22,7 +22,13 @@
             <div class="row">
                 {% for contribution in contributions %}
                     <div class="col-sm-12 col-md-6 col-lg-3 contribution">
-                        {{ haphpy.social_link(contribution) }}
+                        <a href="{{ url('haphpy_contribution_user', {
+                            authProvider: contribution.authProviderId,
+                            identifier:   contribution.identifier
+                        }) }}">
+                            <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
+                            {{ contribution.visibleName }}
+                        </a>
                     </div>
                 {% endfor %}
             </div>
