Change punchline for public contribution page

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contribution.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contribution.html.twig
@@ -13,7 +13,7 @@
 {% block content %}{% spaceless %}
     <section id="contribution-punchline" class="page-section">
         <div class="container">
-            <h1 class="punchline">{{ 'haphpy.punchline'|trans }}</h1>
+            <h1 class="punchline">{{ 'public_contribution.punchline'|trans }}</h1>
         </div>
     </section>
 
