utilisation nested selectors de sass

--- a/app/Resources/assets/sass/modules/_contribution_over.scss
+++ b/app/Resources/assets/sass/modules/_contribution_over.scss
@@ -1,8 +1,11 @@
 /** Contribution time is over **/
-#contribution-over .container {
-  text-align: center;
-}
 
-#contribution-over h2 {
-  text-transform: none;
+#contribution-over {
+  .container {
+    text-align: center;
+  }
+
+  h2 {
+    text-transform: none;
+  }
 }
