--- a/app/Resources/assets/sass/modules/_public_contribution.scss
+++ b/app/Resources/assets/sass/modules/_public_contribution.scss
@@ -2,10 +2,10 @@
 section#contribution-punchline {
   margin-top: 80px;
   padding-bottom: 0;
-}
 
-section#contribution-punchline h1 {
-  margin-bottom: 1em;
+  h1 {
+    margin-bottom: 1em;
+  }
 }
 
 section#contribution {
