--- a/app/Resources/assets/sass/modules/_about.scss
+++ b/app/Resources/assets/sass/modules/_about.scss
@@ -2,12 +2,12 @@
 #final-video {
   background-image: url(../images/galaxy_core.png);
   padding-top: 80px;
-}
 
-#final-video h2 {
-  text-align: center;
-  text-transform: none;
-  margin: 2em 0;
+  h2 {
+    text-align: center;
+    text-transform: none;
+    margin: 2em 0;
+  }
 }
 
 #about-contributions h2 {
