--- a/app/Resources/assets/sass/modules/_header.scss
+++ b/app/Resources/assets/sass/modules/_header.scss
@@ -1,39 +1,38 @@
 header#header {
   padding: 80px 0 0 0;
   background:
-    radial-gradient(circle, #f34141, rgba(243,65,65,0) 50%),
-    linear-gradient(to bottom left, HotPink, rgba(255,122,90,0), DarkOrange),
-    linear-gradient(to right, DarkSeaGreen, #f34141, DodgerBlue)
-;
+  radial-gradient(circle, #f34141, rgba(243,65,65,0) 50%),
+  linear-gradient(to bottom left, HotPink, rgba(255,122,90,0), DarkOrange),
+  linear-gradient(to right, DarkSeaGreen, #f34141, DodgerBlue);
   background-color: #f34141;
   margin-bottom: 0;
-}
 
-header#header div {
-  padding: 2%;
-  max-width: 1140px;
-  margin: 0 auto;
+  div {
+    padding: 2%;
+    max-width: 1140px;
+    margin: 0 auto;
+  }
+
+  #warning-message {
+    position: relative;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  #warning-message div {
+    line-height: 1em;
+    -webkit-animation:progress-bar-stripes 2s linear infinite;
+    animation:progress-bar-stripes 2s linear infinite;
+    padding: 0.2em;
+    text-transform: none;
+  }
 }
 
 #haphpy-logo img {
   width: 100%;
   filter: drop-shadow( 2px 2px 1px rgba(0,0,0,0.3));
   -webfilter: drop-shadow( 2px 2px 1px rgba(0,0,0,0.3));
-}
-
-header#header #warning-message {
-  position: relative;
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0;
-}
-
-header#header #warning-message div {
-  line-height: 1em;
-  -webkit-animation:progress-bar-stripes 2s linear infinite;
-  animation:progress-bar-stripes 2s linear infinite;
-  padding: 0.2em;
-  text-transform: none;
 }
 
 @media screen and (min-width: 361px) {
