correction inclusion gauge

--- a/app/Resources/assets/sass/main.scss
+++ b/app/Resources/assets/sass/main.scss
@@ -2,7 +2,7 @@
 @import "modules/menu";
 @import "modules/header";
 @import "modules/punchline";
-@import "modules/gauche";
+@import "modules/gauge";
 @import "modules/main_content";
 @import "modules/home";
 @import "modules/authentication";
