utilisation de compass pour règles transform

--- a/app/Resources/assets/sass/modules/_exemples.scss
+++ b/app/Resources/assets/sass/modules/_exemples.scss
@@ -37,10 +37,9 @@
   }
 
   > .content-video .fitting-media {
+    @include transform(translate(-50%, -50%));
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
   }
 }
