--- a/app/Resources/assets/sass/modules/_submission.scss
+++ b/app/Resources/assets/sass/modules/_submission.scss
@@ -1,5 +1,6 @@
 /** Submission success page **/
 #video-success {
+  @include transform(translate(-50%, -50%));
   position: fixed;
   top: 50%;
   left: 50%;
@@ -8,13 +9,12 @@
   width: auto;
   height: auto;
   z-index: -100;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
   background: url(../images/audienc.jpg) no-repeat;
   background-size: cover;
 }
 
 #video-hue {
+  @include transform(translate(-50%, -50%));
   position: fixed;
   top: 50%;
   left: 50%;
@@ -23,8 +23,6 @@
   width: auto;
   height: auto;
   z-index: -100;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
   background:
     radial-gradient(circle, rgba(243,65,65,0.15), transparent 50%),
     linear-gradient(to bottom left, rgba(255,105,180,0.25), transparent, rgba(255,140,0,0.25)),
