--- a/app/Resources/assets/sass/modules/_user_groups.scss
+++ b/app/Resources/assets/sass/modules/_user_groups.scss
@@ -16,13 +16,12 @@
 }
 
 .user-group-image img {
+  @include transform(translate(-50%, -50%));
   max-height: 100%;
   max-width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
 }
 
 .user-group-data {
