--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Macro/helpers.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Macro/helpers.html.twig
@@ -45,13 +45,13 @@ desaturated blue   44576a   68,  87,  10
     style="box-shadow: inset 0 -6px 0 rgba({{ color }},0.25);"
 {% endspaceless %}{% endmacro %}
 
-{% macro social_link(contribution) %}{% spaceless %}
+{% macro social_link(contribution, label) %}{% spaceless %}
     {% set linkable = (contribution.authProvider in ['github', 'twitter']) %}
     {% if linkable %}
         <a href="{{ 'https://' ~ contribution.authProvider ~ '.com/' ~ contribution.identifier }}">
     {% endif %}
     <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
-    {{ contribution.visibleName }}
+    {{ label }}
     {% if linkable %}</a>{% endif %}
 {% endspaceless %}{% endmacro %}
 
