Add twitter card for contribution page

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Admin/list.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Admin/list.html.twig
@@ -10,6 +10,8 @@
 
 {% block stats %}{% endblock %}
 
+{% block twitter_card %}{% endblock %}
+
 {% block content %}
     <section class="page-section" id="admin-list">
     <div class="container">
