--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8" />
@@ -28,6 +29,7 @@
         <meta name="msapplication-TileColor" content="#f34141">
         <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
         <meta name="theme-color" content="#f34141">
+        {% block twitter_card %}{% endblock %}
         {% block stats %}{% include 'AppBundle::Common/ga.html.twig' %}{% endblock %}
     </head>
     <body class="has-header">
