--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -28,7 +28,14 @@
         <meta name="msapplication-TileColor" content="#f34141">
         <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
         <meta name="theme-color" content="#f34141">
-        {% block twitter_card %}{% endblock %}
+        {% block twitter_card %}
+        {% include 'AppBundle::Common/twitter_card.html.twig' with {
+            twitter_card_creator: twitter_account,
+            twitter_card_title: 'twitter_card.home.title'|trans,
+            twitter_card_description: 'twitter_card.home.description'|trans,
+            twitter_card_image: asset('assets/images/haphpy-mosaic-960.jpg', absolute = true),
+        } %}
+        {% endblock %}
         {% block stats %}{% include 'AppBundle::Common/ga.html.twig' %}{% endblock %}
     </head>
     <body class="has-header">
