Fix submission success CSS

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
@@ -10,6 +10,7 @@
 @import "modules/authentication";
 @import "modules/exemples";
 @import "modules/contribution_over";
+@import "modules/submission";
 @import "modules/user_groups";
 @import "modules/about";
 @import "modules/license";
